Refactor CORS configuration to use allowed origins from environment variable